--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -34,8 +34,8 @@ h1, h2, h3, .hero-title, .section-title {
 :root { 
   --background-color: #ffffff; /* Background color for the entire website, including individual sections */
   --default-color: #221f1f; /* Default color used for the majority of the text content across the entire website */
-  --heading-color: #433f39; /* Color for headings, subheadings and title throughout the website */
-  --accent-color: #faa72c; /* Accent color that represents your brand on the website. It's used for buttons, links, and other elements that need to stand out */
+  --heading-color: #16130f; /* Color for headings, subheadings and title throughout the website */
+  --accent-color: #f3bf16; /* Accent color that represents your brand on the website. It's used for buttons, links, and other elements that need to stand out */
   --surface-color: #ffffff; /* The surface color is used as a background of boxed elements within sections, such as cards, icon boxes, or other elements that require a visual separation from the global background. */
   --contrast-color: #ffffff; /* Contrast color for text, ensuring readability against backgrounds of accent, heading, or default colors. */
 }
@@ -43,7 +43,7 @@ h1, h2, h3, .hero-title, .section-title {
 /* Nav Menu Colors - The following color variables are used specifically for the navigation menu. They are separate from the global colors to allow for more customization options */
 :root {
   --nav-color: #ffffff;  /* The default color of the main navmenu links */
-  --nav-hover-color: #ffb03b; /* Applied to main navmenu links when they are hovered over or active */
+  --nav-hover-color: rgb(252, 199, 26); /* Applied to main navmenu links when they are hovered over or active */
   --nav-mobile-background-color: #ffffff; /* Used as the background color for mobile navigation menu */
   --nav-dropdown-background-color: #ffffff; /* Used as the background color for dropdown items that appear when hovering over primary navigation items */
   --nav-dropdown-color: #444444; /* Used for navigation links of the dropdown items in the navigation menu. */
