--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -32,12 +32,12 @@ h1, h2, h3, .hero-title, .section-title {
 
 /* Global Colors - The following color variables are used throughout the website. Updating them here will change the color scheme of the entire website */
 :root { 
-  --background-color: #ffffff; /* Background color for the entire website, including individual sections */
+  --background-color: #fdffa2; /* Background color for the entire website, including individual sections */
   --default-color: #382e21; /* Default color used for the majority of the text content across the entire website */
   --heading-color: #3a2f20; /* Color for headings, subheadings and title throughout the website */
-  --accent-color: #f3bf16; /* Accent color that represents your brand on the website. It's used for buttons, links, and other elements that need to stand out */
+  --accent-color: #f8c006; /* Accent color that represents your brand on the website. It's used for buttons, links, and other elements that need to stand out */
   --surface-color: #ffffff; /* The surface color is used as a background of boxed elements within sections, such as cards, icon boxes, or other elements that require a visual separation from the global background. */
-  --contrast-color: #ffffff; /* Contrast color for text, ensuring readability against backgrounds of accent, heading, or default colors. */
+  --contrast-color: #fcde7d; /* Contrast color for text, ensuring readability against backgrounds of accent, heading, or default colors. */
 }
 
 /* Nav Menu Colors - The following color variables are used specifically for the navigation menu. They are separate from the global colors to allow for more customization options */
