--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -34,7 +34,7 @@ h1, h2, h3, .hero-title, .section-title {
 :root { 
   --background-color: #f3f3d7; /* Background color for the entire website, including individual sections */
   --default-color: #382e21; /* Default color used for the majority of the text content across the entire website */
-  --heading-color: #6e5838; /* Color for headings, subheadings and title throughout the website */
+  --heading-color: #362915; /* Color for headings, subheadings and title throughout the website */
   --accent-color: #f8c006; /* Accent color that represents your brand on the website. It's used for buttons, links, and other elements that need to stand out */
   --surface-color: #ffffff; /* The surface color is used as a background of boxed elements within sections, such as cards, icon boxes, or other elements that require a visual separation from the global background. */
   --contrast-color: #f7f6ee; /* Contrast color for text, ensuring readability against backgrounds of accent, heading, or default colors. */
