--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -62,7 +62,7 @@ h1, h2, h3, .hero-title, .section-title {
   --default-color: #ffffff;
   --heading-color: #ffffff;
   --surface-color: #4d463e;
-  --contrast-color: #f8e7e7;
+  --contrast-color: #24221c;
 }
 
 /* Smooth scroll */
