--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -61,7 +61,7 @@ h1, h2, h3, .hero-title, .section-title {
   --background-color: #1e160d;
   --default-color: #ffffff;
   --heading-color: #ffffff;
-  --surface-color: #42301c;
+  --surface-color: #ebe080f6;
   --contrast-color: #ffffff;
 }
 
