--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -58,7 +58,7 @@ h1, h2, h3, .hero-title, .section-title {
 }
 
 .dark-background {
-  --background-color: #1e160d;
+  --background-color: #dfbc95;
   --default-color: #ffffff;
   --heading-color: #ffffff;
   --surface-color: #ebe080f6;
