--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -29,7 +29,6 @@ h1, h2, h3, .hero-title, .section-title {
   color: #b22222; /* optional: Stone Grill’s red */
 }
 
-
 /* Global Colors - The following color variables are used throughout the website. Updating them here will change the color scheme of the entire website */
 :root { 
   --background-color: #ffffff; /* Background color for the entire website, including individual sections */
@@ -58,10 +57,10 @@ h1, h2, h3, .hero-title, .section-title {
 }
 
 .dark-background {
-  --background-color: #dfbc95;
+  --background-color: #1e160d;
   --default-color: #ffffff;
   --heading-color: #ffffff;
-  --surface-color: #ebe080f6;
+  --surface-color: #42301c;
   --contrast-color: #ffffff;
 }
 
