--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -35,15 +35,15 @@ h1, h2, h3, .hero-title, .section-title {
   --default-color: #444444; /* Default color used for the majority of the text content across the entire website */
   --heading-color: #433f39; /* Color for headings, subheadings and title throughout the website */
   --accent-color: #ffb03b; /* Accent color that represents your brand on the website. It's used for buttons, links, and other elements that need to stand out */
-  --surface-color: #fffff9; /* The surface color is used as a background of boxed elements within sections, such as cards, icon boxes, or other elements that require a visual separation from the global background. */
-  --contrast-color: #ffffff; /* Contrast color for text, ensuring readability against backgrounds of accent, heading, or default colors. */
+  --surface-color: #f7f0d4ff; /* The surface color is used as a background of boxed elements within sections, such as cards, icon boxes, or other elements that require a visual separation from the global background. */
+  --contrast-color: #f1ededff; /* Contrast color for text, ensuring readability against backgrounds of accent, heading, or default colors. */
 }
 
 /* Nav Menu Colors - The following color variables are used specifically for the navigation menu. They are separate from the global colors to allow for more customization options */
 :root {
-  --nav-color: #ffffff;  /* The default color of the main navmenu links */
+  --nav-color: #c75e5eff;  /* The default color of the main navmenu links */
   --nav-hover-color: #ffb03b; /* Applied to main navmenu links when they are hovered over or active */
-  --nav-mobile-background-color: #ffffff; /* Used as the background color for mobile navigation menu */
+  --nav-mobile-background-color: #f5dedeff; /* Used as the background color for mobile navigation menu */
   --nav-dropdown-background-color: #ffffff; /* Used as the background color for dropdown items that appear when hovering over primary navigation items */
   --nav-dropdown-color: #444444; /* Used for navigation links of the dropdown items in the navigation menu. */
   --nav-dropdown-hover-color: #ffb03b; /* Similar to --nav-hover-color, this color is applied to dropdown navigation links when they are hovered over. */
@@ -52,8 +52,8 @@ h1, h2, h3, .hero-title, .section-title {
 /* Color Presets - These classes override global colors when applied to any section or element, providing reuse of the sam color scheme. */
 
 .light-background {
-  --background-color: #fffaf3;
-  --surface-color: #ffffff;
+  --background-color: #faf1e3ff;
+  --surface-color: #ecb0b0ff;
 }
 
 .dark-background {
@@ -183,7 +183,7 @@ h6 {
 .php-email-form .error-message {
   display: none;
   background: #df1529;
-  color: #ffffff;
+  color: #f0ede2ff;
   text-align: left;
   padding: 15px;
   margin-bottom: 24px;
@@ -550,7 +550,7 @@ h6 {
     position: fixed;
     overflow: hidden;
     inset: 0;
-    background: rgba(33, 37, 41, 0.8);
+    background: rgba(27, 31, 34, 0.8);
     transition: 0.3s;
   }
 
@@ -749,7 +749,7 @@ section,
 .section {
   color: var(--default-color);
   background-color: var(--background-color);
-  padding: 60px 0;
+  padding: 20px 0;
   scroll-margin-top: 112px;
   overflow: clip;
 }
@@ -787,7 +787,7 @@ section,
 
 .section-title div {
   color: var(--heading-color);
-  margin: 10px 0 0 0;
+  margin: 15px 0 0 0;
   font-size: 32px;
   font-weight: 700;
   font-family: var(--heading-font);
