--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -26,7 +26,7 @@ h1, h2, h3, .hero-title, .section-title {
   font-family: var(--heading-font);
   font-weight: 700; /* Bold */
   letter-spacing: 0.5px;
-  color: #b22222; /* optional: Stone Grill’s red */
+  color: #f0d0d0ff; /* optional: Stone Grill’s red */
 }
 
 /* Global Colors - The following color variables are used throughout the website. Updating them here will change the color scheme of the entire website */
