--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -1743,7 +1743,7 @@ section,
 
 #contact-float {
   position: fixed;
-  bottom: 20px;
+  top: 20px;
   left: 20px;
   display: flex;
   flex-direction: column;
@@ -1752,8 +1752,8 @@ section,
 }
 
 .contact-icon {
-  width: 50px;
-  height: 50px;
+  width: 48px;
+  height: 48px;
   background-color: #b22222;
   color: white;
   border-radius: 50%;
