--- a/order/style.css
+++ b/order/style.css
@@ -47,8 +47,8 @@ h1, h2 {
   border: solid: #000066;
 
   box-shadow:
-    inset 2px 2px 5px rgba(99, 129, 36, 0.5),
-    inset -2px -2px 5px rgba(99, 129, 36, 0.5);
+    inset 3px 5px rgba(99, 36, 129, 0.5),
+    inset -3px -5px rgba(99, 36, 129, 1);
 }
 
 input, select, textarea {
@@ -266,4 +266,21 @@ button:hover {
   border: none;
   border-top: 1px dashed #AD4B26;
   margin: 10px 0 8px;
+}
+
+.home-btn {
+  display: flex;
+  position: top-right;
+  background-color: #b280e6;
+  color: white;
+  padding: 4px 9px;
+  font-size: 10px;
+  border-radius: 8px;
+  text-decoration: none;
+  transition: background-color 0.3s;
+  font-weight: bold;
+}
+
+.home-btn:hover {
+  background-color: #8B1A1A;
 }
