--- a/order/style.css
+++ b/order/style.css
@@ -286,7 +286,7 @@ button:hover {
 }
 
 .hero {
-  background-image: url('assets/hero-bg.jpg'); /* Change to your background */
+  background-image: url('assets/IMG_0267.png'); /* Change to your background */
   background-size: cover;
   background-position: center;
   height: 320px;
