--- a/order/style.css
+++ b/order/style.css
@@ -20,7 +20,7 @@ body {
 
 .title {
   font-size: 22px;
-  color: #292F33;
+  color: #272f35;
   margin: 0;
   font-weight: bold;
 }
@@ -60,7 +60,7 @@ input, select, textarea {
   border: 1px solid #381912;
   border-radius: 8px;
   font-size: 14px;
-  color: #221F1F;
+  color: #141010;
   box-sizing: border-box;
 }
 
@@ -84,7 +84,7 @@ button:hover {
 .category-btn {
   width: 50%;
   padding: 8px;
-  background-color: #63277e;
+  background-color: #5d2279;
   color: white;
   font-size: 15px;
   border-radius: 8px;
@@ -105,13 +105,13 @@ button:hover {
   display: flex;
   align-items: center;
   padding: 7px 1;
-  border-bottom: 1px dashed #AD4B26;
+  border-bottom: 1px dashed #8a1180;
 }
 
 
 .item-name {
   flex: 1;
-  color: #4B0000;
+  color: #24023f;
   font-size: 14px;
   word-break: break-word;
 }
@@ -129,7 +129,7 @@ button:hover {
   width: 70px;
   text-align: right;
   font-weight: bold;
-  color: #8B1A1A;
+  color: #550a5c;
   font-size: 14px;
 }
 
@@ -138,9 +138,9 @@ button:hover {
   border: none;
   color: #B22222;
   cursor: pointer;
-  font-size: 14px;     /* Size just right */
+  font-size: 12px;     /* Size just right */
   padding: 0;
-  line-height: 1;
+  line-height: 0.7;
   width: 24px;
   text-align: center;
   transition: transform 0.2s ease;
@@ -154,13 +154,13 @@ button:hover {
   top: 50%;
   left: 50%;
   transform: translate(-50%, -50%);
-  background: rgba(0, 0, 0, 0.7);
+  background: rgba(0, 0, 0, 0.658);
   padding: 20px;
   border-radius: 26px;
   border: 1px solid #c570e2;
   width: 72%;
   max-width: 400px;
-  box-shadow: 0 2px 4px rgba(0, 0, 0, 0.6);
+  box-shadow: 0 2px 4px rgba(77, 4, 87, 0.6);
   color: white;
   z-index: 999;
   max-height: 85vh;
@@ -171,7 +171,7 @@ button:hover {
   display: inline-block;
   padding: 4px 8px;
   margin: 6px;
-  border: 0.2px solid #ccc;
+  border: 0.2px solid #830e92;
   border-radius: 12px; 
   cursor: pointer;
   transition: background 0.4s;
