--- a/order/style.css
+++ b/order/style.css
@@ -3,7 +3,7 @@ body, html {
   margin: 0;
   padding: 0;
   font-family: sans-serif;
-  background: #E6E6FA;
+  background: #d3212g;
   color: #222;
 }
 
@@ -16,8 +16,8 @@ button {
   display: flex;
   justify-content: space-between;
   align-items: center;
-  padding: 12px;
-  background: rgba(255,0,2,9);
+  padding: 10px;
+  background: #FF4433;
   color: #fff;
   position: sticky;
   top: 0;
@@ -51,9 +51,9 @@ button {
 }
 
 .btn.primary {
-  background: #fff;
+  background: #ffffff;
   color: #000000;
-  border: 1px solid  #800080;
+  border: 2px solid  #C882FA;
   padding: 8px 14px;
   border-radius: 6px;
 }
@@ -127,6 +127,7 @@ button {
   background: #fff;
   padding: 14px;
   border-radius: 10px;
+  border-color: 000000;
   margin-bottom: 1em;
   box-shadow: 0 10px 15px rgba(0,0.7,0,0.3);
 }
@@ -533,4 +534,4 @@ textarea {
 #orderForm textarea,
 #orderForm select {
   font-size: 16px; /* Stops mobile browsers from auto-zooming */
-}
+}o
